# Modular_RAG

./: .gitignore  Modular_RAG_Implementation_Guide.md  README.md  run_app.sh
api/: README.md  main.py  pyproject.toml  requirements.txt  users.json
api/controller/: auth_controller.py  rag_controller.py  speech_controller.py
api/data/: metadata_store.json  parent_chunks.json
api/docs/: plan.md
api/lib/: config.py  utils.py
api/routes/: auth.py  rag.py  speech.py
api/schema/: rag_schema.py  user_schema.py
api/service/: auth_service.py  file_processing_service.py  gemini_service.py  pinecone_service.py  rag_modules_service.py  speech_service.py
api/service/rag/: rag_service.py
backend/: .env  README.md  pyproject.toml  requirements.txt  test_integration.py
backend/app/: main.py
backend/app/core/: config.py  db.py  di.py  gemini_client.py
backend/app/domain/: models.py
backend/app/index/: embeddings.py  vector_store.py
backend/app/ingestion/: chunker.py  worker.py
backend/app/rag/: base.py  context_assembly.py
backend/app/routers/: __init__.py  admin.py  feedback.py  ingestion.py  search.py
backend/data/indexes/: bge-large-en.hnsw.faiss.npz
backend/data/uploads/0f4cc5b5-50dc-4c64-b49d-1194ac7f0500/: status.json
backend/data/uploads/209fa422-bae2-4026-9ee2-46d5a60a9198/: status.json
backend/data/uploads/352ed929-1f3e-49bc-b647-57fcc041482f/: status.json
backend/data/uploads/5482be9b-e189-4178-b42e-51efb19a0d36/: status.json
backend/data/uploads/69be4c23-3ae9-4d90-83b0-ee0fc62f696d/: status.json
data/: meta.db
(+29 files in other folders)
